--- a/client/layout.html
+++ b/client/layout.html
@@ -1,6 +1,9 @@
 <template name="layout">
 	<img src="img/backdrop.jpg" class="bg">
     {{> menu}}
+    {{#if currentUser}}
+      {{> hello}}
+    {{/if}}
 </template>
 
 <template name="menu">
@@ -14,19 +17,20 @@
       <a href="#" data-activates="menu" class="menu-trigger portcl-blue waves-effect waves-light btn-large btn-floating "><i class="material-icons">menu</i></a>
       <ul class="side-nav" id="menu">
         <li>
-        	<form>
-        		<input type="text" name="newContact" id="new_contact" placeholder="e-mail address" class="portcl-dark-blue "/>
+          <form>
+            <input type="text" name="newContact" id="new_contact" placeholder="e-mail address" class="portcl-dark-blue "/>
             <label class="portcl-dark-blue-text" for="new_contact">Invite a New Contact</label>
           <button class="btn-large portcl-dark-blue waves-effect waves-light" type="submit" name="action">Send Invite
             <i class="material-icons right">send</i>
           </button>
-        	</form>
+          </form>
         </li>
       </ul>
+      <a href="#" class="right">
+        <li>{{> loginButtons}}</li>
+      </a>
+
     </div>
   </nav>
-
-
-
 </template>
 
