--- a/client/layout.html
+++ b/client/layout.html
@@ -16,6 +16,7 @@
       </a>
       <a href="#" data-activates="menu" class="menu-trigger portcl-blue waves-effect waves-light btn-large btn-floating "><i class="material-icons">menu</i></a>
       <ul class="side-nav" id="menu">
+        <li>{{> loginButtons}}</li>
         <li>
           <form>
             <input type="text" name="newContact" id="new_contact" placeholder="e-mail address" class="portcl-dark-blue "/>
@@ -27,7 +28,7 @@
         </li>
       </ul>
       <a href="#" class="right">
-        <li>{{> loginButtons}}</li>
+        <!-- <li>{{> loginButtons}}</li> -->
       </a>
 
     </div>
