added tmeasday:presence; added check to resolve Match error with presence

--- a/client/home.html
+++ b/client/home.html
@@ -1,4 +1,4 @@
-<template name="home">
+<!-- <template name="home">
   <div class="row">
     <div class="col s12">
       <h1>WebRTC Signalling with Meteor demo</h1>
@@ -23,3 +23,4 @@
     </div>
   </div>
 </template>
+ -->
