--- a/client/peer_hello.html
+++ b/client/peer_hello.html
@@ -3,7 +3,7 @@
     <div id="video-container">
       <!-- note the 'autoplay' -->
       <div class="row">
-        <div class="col s5">
+        <div class="left">
           <ul class="collection transparent">
               <li class="collection-item">
                 Make a call
@@ -15,11 +15,11 @@
                 <li class="collection-item waves-effect waves-light" id="endCall">
                 End Call 
                 </li>
-<!--               <li class="collection-item waves-effect waves-light">
-              </li> -->
             </ul>
         </div>
-        <div class="col s6 offset-s1">
+        <div class="right theirVideoBox">
+          <img src="img/blue_portal_transparent.gif" id="blue-portal">
+          <img src="img/blue_portal.gif" id="blue-portal-bg">
           <video id="theirVideo" class="theirVideo" autoplay></video>
         </div>
       </div>
