added myPeerId text back on to page

--- a/client/peer_hello.html
+++ b/client/peer_hello.html
@@ -4,6 +4,7 @@
       <!-- note the 'autoplay' -->
       <div class="row">
         <div class="left">
+           <p class="invisible">Your id: <span id="myPeerId">...</span></p>
           <ul class="collection transparent">
               <li class="collection-item">
                 Make a call
