added conditional to display make call / list of users / end call if users are available or suggestions to try it out with a 2nd (incognito) window if no other current users; aligned and floated poRTCal logo to the right

--- a/client/layout.html
+++ b/client/layout.html
@@ -22,10 +22,10 @@
         </li>
       </ul>
       <a href="#" class="portcl-dark-blue login-trigger-space">{{> loginButtons}}</a>
-      <a href="#!" class="brand-logo right">
-        <span class="logo-text">P</span>
-        <img src="img/portal_O.png" alt="letter o" id="logo-o"/>
-        <span class="logo-text">R T C A L</span>
+      <a href="#!" class="brand-logo right right-align">
+        <span class="logo-text right-align">P</span>
+        <img src="img/portal_O.png" alt="letter o" id="logo-o" class="right-align" />
+        <span class="logo-text  right-align">R T C A L</span>
       </a>
     </div>
   </nav>
